--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "eslint-plugin-typescript-import-patterns",
+  "name": "eslint-plugin-ts-import",
   "version": "0.0.1",
-  "description": "Provide import-patterns that are expected to be followed within the repo",
-  "homepage": "https://github.com/bradennapier/eslint-plugin-typescript-import-patterns",
+  "description": "Provide Typescript import-patterns that are expected to be followed within the repo",
+  "homepage": "https://github.com/bradennapier/eslint-plugin-ts-import",
   "author": "Braden Napier <bradynapier@gmail.com>",
   "license": "MIT",
   "main": "lib/index.js",
@@ -12,10 +12,10 @@
   "sideEffects": false,
   "repository": {
     "type": "git",
-    "url": "https://github.com/bradennapier/eslint-plugin-typescript-import-patterns"
+    "url": "https://github.com/bradennapier/eslint-plugin-ts-import"
   },
   "bugs": {
-    "url": "https://github.com/bradennapier/eslint-plugin-typescript-import-patterns/issues"
+    "url": "https://github.com/bradennapier/eslint-plugin-ts-import/issues"
   },
   "scripts": {
     "build": "yarn build:cjs && yarn build:es",
@@ -41,6 +41,7 @@
     "@semantic-release/changelog": "^5.0.1",
     "@semantic-release/git": "^9.0.0",
     "@semantic-release/npm": "^7.0.5",
+    "@types/eslint": "^7.2.0",
     "@typescript-eslint/eslint-plugin": "^3.3.0",
     "@typescript-eslint/parser": "^3.3.0",
     "commitizen": "^4.1.2",
