chore:add npmrc (#4)
* chore:add npmrc

* fix: ci build

* remove .npmrc from git remote

--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
   "sideEffects": false,
   "repository": {
     "type": "git",
-    "url": "https://github.com/bradennapier/eslint-plugin-ts-import"
+    "url": "git://github.com/bradennapier/eslint-plugin-ts-import.git"
   },
   "bugs": {
     "url": "https://github.com/bradennapier/eslint-plugin-ts-import/issues"
   },
+  "publishConfig": { "registry": "https://npm.pkg.github.com/" },
   "scripts": {
     "build": "yarn build:cjs && yarn build:es",
     "build:cjs": "tsc",
