--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
   "types": "lib/index.d.ts",
   "typings": "lib/index.d.ts",
   "sideEffects": false,
+  "keywords": [
+    "eslint",
+    "eslintplugin"
+  ],
   "repository": {
     "type": "git",
     "url": "git://github.com/bradennapier/eslint-plugin-ts-import.git"
@@ -17,7 +21,6 @@
   "bugs": {
     "url": "https://github.com/bradennapier/eslint-plugin-ts-import/issues"
   },
-  "publishConfig": { "registry": "https://npm.pkg.github.com/" },
   "scripts": {
     "build": "yarn build:cjs && yarn build:es",
     "build:cjs": "tsc",
@@ -30,13 +33,15 @@
     "release": "semantic-release",
     "test": "echo Tests TODO"
   },
+  "peerDependencies": {
+    "eslint": "^7.2.0",
+    "typescript": "^3.9.5"
+  },
   "dependencies": {
     "@typescript-eslint/experimental-utils": "^3.3.0",
     "@zerollup/ts-helpers": "^1.7.18",
-    "eslint": "^7.2.0",
     "minimatch": "^3.0.4",
-    "tslib": "^2.0.0",
-    "typescript": "^3.9.5"
+    "tslib": "^2.0.0"
   },
   "devDependencies": {
     "@semantic-release/changelog": "^5.0.1",
@@ -46,6 +51,7 @@
     "@typescript-eslint/eslint-plugin": "^3.3.0",
     "@typescript-eslint/parser": "^3.3.0",
     "commitizen": "^4.1.2",
+    "eslint": "^7.2.0",
     "eslint-config-airbnb-base": "^14.2.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-import-resolver-typescript": "^2.0.0",
@@ -54,12 +60,14 @@
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-promise": "^4.2.1",
     "gh-pages": "^3.0.0",
+    "git-cz": "^4.7.0",
     "husky": "^4.2.5",
     "lint-staged": "^10.2.11",
     "prettier": "^2.0.5",
     "rimraf": "^3.0.2",
     "semantic-release": "^17.0.8",
-    "ts-node": "^8.10.2"
+    "ts-node": "^8.10.2",
+    "typescript": "^3.9.5"
   },
   "files": [
     "lib/",
