--- a/package.json
+++ b/package.json
@@ -39,17 +39,26 @@
   },
   "dependencies": {
     "@zerollup/ts-helpers": "^1.7.18",
+    "debug": "^4.1.1",
+    "fast-glob": "^3.2.4",
+    "is-glob": "^4.0.1",
     "minimatch": "^3.0.4",
+    "resolve": "^1.17.0",
+    "tsconfig-paths": "^3.9.0",
     "tslib": "^2.0.0"
   },
   "devDependencies": {
     "@semantic-release/changelog": "^5.0.1",
     "@semantic-release/git": "^9.0.0",
     "@semantic-release/npm": "^7.0.5",
+    "@types/debug": "^4.1.5",
     "@types/eslint": "^7.2.0",
+    "@types/is-glob": "^4.0.1",
+    "@types/minimatch": "^3.0.3",
+    "@types/resolve": "^1.17.1",
     "@typescript-eslint/eslint-plugin": "^3.3.0",
-    "@typescript-eslint/parser": "^3.3.0",
     "@typescript-eslint/experimental-utils": "^3.3.0",
+    "@typescript-eslint/parser": "^3.3.0",
     "commitizen": "^4.1.2",
     "eslint": "^7.2.0",
     "eslint-config-airbnb-base": "^14.2.0",
