--- a/package.json
+++ b/package.json
@@ -34,11 +34,10 @@
     "test": "echo Tests TODO"
   },
   "peerDependencies": {
-    "eslint": "^7.2.0",
-    "typescript": "^3.9.5"
+    "eslint": ">= 6 < 8",
+    "typescript": ">= 3"
   },
   "dependencies": {
-    "@zerollup/ts-helpers": "^1.7.18",
     "debug": "^4.1.1",
     "fast-glob": "^3.2.4",
     "is-glob": "^4.0.1",
@@ -56,27 +55,27 @@
     "@types/is-glob": "^4.0.1",
     "@types/minimatch": "^3.0.3",
     "@types/resolve": "^1.17.1",
-    "@typescript-eslint/eslint-plugin": "^3.3.0",
-    "@typescript-eslint/experimental-utils": "^3.3.0",
-    "@typescript-eslint/parser": "^3.3.0",
+    "@typescript-eslint/eslint-plugin": "^3.6.1",
+    "@typescript-eslint/experimental-utils": "^3.6.1",
+    "@typescript-eslint/parser": "^3.6.1",
     "commitizen": "^4.1.2",
-    "eslint": "^7.2.0",
+    "eslint": "^7.4.0",
     "eslint-config-airbnb-base": "^14.2.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-import-resolver-typescript": "^2.0.0",
-    "eslint-plugin-flowtype": "^5.1.3",
-    "eslint-plugin-import": "^2.21.2",
+    "eslint-plugin-flowtype": "^5.2.0",
+    "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-promise": "^4.2.1",
-    "gh-pages": "^3.0.0",
+    "gh-pages": "^3.1.0",
     "git-cz": "^4.7.0",
     "husky": "^4.2.5",
     "lint-staged": "^10.2.11",
     "prettier": "^2.0.5",
     "rimraf": "^3.0.2",
-    "semantic-release": "^17.0.8",
+    "semantic-release": "^17.1.1",
     "ts-node": "^8.10.2",
-    "typescript": "^3.9.5"
+    "typescript": "^3.9.6"
   },
   "files": [
     "lib/",
@@ -92,25 +91,6 @@
     "commitizen": {
       "path": "git-cz"
     }
-  },
-  "release": {
-    "branches": [
-      "master",
-      {
-        "name": "next",
-        "prerelease": "rc"
-      }
-    ],
-    "verifyConditions": [
-      "@semantic-release/changelog",
-      "@semantic-release/npm",
-      "@semantic-release/git"
-    ],
-    "prepare": [
-      "@semantic-release/changelog",
-      "@semantic-release/npm",
-      "@semantic-release/git"
-    ]
   },
   "lint-staged": {
     "src/**/*.{ts,tsx}": [
