--- a/.github/workflows/pull_request_ci.yml
+++ b/.github/workflows/pull_request_ci.yml
@@ -9,15 +9,14 @@ jobs:
 
     strategy:
       matrix:
-        node: [10.x, 12.x, 14.x]
+        node-version: [10.x, 12.x, 14.x]
 
     steps:
     - uses: actions/checkout@v2
-    - name: Use Node.js ${{ matrix.node }}
-      uses: actions/setup-node@v2.0.0
+    - name: Use Node.js ${{ matrix.node-version }}
+      uses: actions/setup-node@v1
       with:
-        node-version: ${{ matrix.node }}
-        check-latest: true
+        node-version: ${{ matrix.node-version }}
     - name: npm install, build, and test
       run: |
         yarn install --pure-lockfile
