--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
     "@typescript-eslint/experimental-utils": "^3.6.1",
     "@typescript-eslint/parser": "^3.6.1",
     "commitizen": "^4.1.2",
-    "cz-conventional-changelog": "^3.2.0",
+    "cz-conventional-changelog": "3.2.0",
     "eslint": "^7.4.0",
     "eslint-config-airbnb-base": "^14.2.0",
     "eslint-config-prettier": "^6.11.0",
@@ -88,14 +88,14 @@
       "pre-push": "yarn lint && yarn clean && yarn build && yarn test"
     }
   },
-  "config": {
-    "commitizen": {
-      "path": "cz-conventional-changelog"
-    }
-  },
   "lint-staged": {
     "src/**/*.{ts,tsx}": [
       "eslint --fix"
     ]
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
