--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "@typescript-eslint/experimental-utils": "^3.6.1",
     "@typescript-eslint/parser": "^3.6.1",
     "commitizen": "^4.1.2",
+    "conventional-changelog-conventionalcommits": "^4.3.0",
     "cz-conventional-changelog": "3.2.0",
     "eslint": "^7.4.0",
     "eslint-config-airbnb-base": "^14.2.0",
